--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,7 +16,7 @@
                     <li>
                         <form role="search" class="navbar-form" id="search">
                             <div class="form-group">
-                                <input type="text" value="速度与激情" placeholder="Search for Movie Title" class="form-control" name="search">
+                                <input type="text" value="" placeholder="Search for Movie Title" class="form-control" name="search">
                             </div>
                             <button class="btn btn-default" type="submit">Search</button>
                         </form>
