--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -23,16 +23,16 @@
                     </li>
                 </ul>
             </div>
-            <div class="navbar-header col-sm-6 col-md-6">
-                <div class="logo-well">
-                    <a href="http://neo4j.com/developer-resources">
-                    <img src="http://neo4j-contrib.github.io/developer-resources/language-guides/assets/img/logo-white.svg" alt="Neo4j World's Leading Graph Database" id="logo">
-                    </a>
-                </div>
-                <div class="navbar-brand">
-                    <div class="brand">Neo4j Movies</div>
-                </div>
-            </div>
+            <!--<div class="navbar-header col-sm-6 col-md-6">-->
+                <!--<div class="logo-well">-->
+                    <!--<a href="http://neo4j.com/developer-resources">-->
+                    <!--<img src="http://neo4j-contrib.github.io/developer-resources/language-guides/assets/img/logo-white.svg" alt="Neo4j World's Leading Graph Database" id="logo">-->
+                    <!--</a>-->
+                <!--</div>-->
+                <!--<div class="navbar-brand">-->
+                    <!--<div class="brand">Neo4j Movies</div>-->
+                <!--</div>-->
+            <!--</div>-->
         </div>
     </div>
 </div>
